--- a/src/_includes/blog.html
+++ b/src/_includes/blog.html
@@ -1,11 +1,11 @@
 ---
-title: Our Blog
+title: entries
 layout: default
 ---
 
 <div class="container max-w-3xl mt-6 px-6">
 
-    <h1 class="font-bold text-5xl">{{title}}</h1>
+    <h1 class="font-light text-2xl">{{title}}</h1>
 
     {{ content | safe }}
 
