--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,10 +1,4 @@
 <footer class="{{ 'fixed' if path == 'home' }} bottom-0 text-center w-full py-4">
-    <small class="text-white-000"> // 
-        {{settings.name}}
-        ///
-        <a href="{{settings.url}}" target="_blank" class="underline">{{settings.author}}</a>
-        •
-    <small class="text-gray-500">
-        <a href="https://github.com/surjithctly/neat-starter" class="underline" target="_blank" rel="noopener">neat theme</a>
-    </small>
+    <small class="text-white-000"> /_ / 
+     </small>
 </footer>
