--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,4 +1,4 @@
 <footer class="{{ 'fixed' if path == 'home' }} bottom-0 text-center w-full py-4">
-    <small class="text-white-000"> /_ / 
+    <small class="text-white-500"> _ 
      </small>
 </footer>
