--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -14,7 +14,7 @@
             </svg>
         </button>
 
-        <!--view all posts-->
+        <!--Menu-->
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto text-center " :class="{ 'block shadow-3xl': isOpen, 'hidden': !isOpen }" @click.away="isOpen = false" x-show.transition="true">
 
             {% if navigation.items %}
