--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,4 +1,6 @@
 <footer class="{{ 'fixed' if path == 'home' }} bottom-0 text-center w-full py-4">
+    <a href="/blog" target="_self" class="underline">index</a
     <small class="text-indigo-300"> _ 
-     </small>
+    <a href="{{settings.url}}" target="_self" class="underline">{{settings.author}}</a 
+    </small>
 </footer>
