--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="{{ 'fixed' if path == 'home' }} bottom-0 text-center w-full py-4">
-    <a href="/blog" target="_self" class="underline">⏎</a
-    <small class="text-indigo-300"> 
-    <a href="{{settings.url}}" target="_self" class="none">{{settings.author}}</a 
+ 
+    <small class="text-indigo-200"> 
+    <a href="{{settings.url}}" target="_self" class="none">⏎</a 
     </small>
 </footer>
